crates/fsqlite-harness/tests/ui/sealed_btree_cursor_impl_fail.stderr
error[E0277]: the trait bound `ExternalCursor: traits::sealed::Sealed` is not satisfied
 --> tests/ui/sealed_btree_cursor_impl_fail.rs:7:25
  |
7 | impl BtreeCursorOps for ExternalCursor {
  |                         ^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `traits::sealed::Sealed` is not implemented for `ExternalCursor`
 --> tests/ui/sealed_btree_cursor_impl_fail.rs:5:1
  |
5 | struct ExternalCursor;
  | ^^^^^^^^^^^^^^^^^^^^^
help: the following other types implement trait `traits::sealed::Sealed`
 --> $WORKSPACE/crates/fsqlite-btree/src/traits.rs
  |
  | impl sealed::Sealed for MockBtreeCursor {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MockBtreeCursor`
  |
 ::: $WORKSPACE/crates/fsqlite-btree/src/cursor.rs
  |
  | impl<P: PageWriter> sealed::Sealed for BtCursor<P> {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `BtCursor<P>`
note: required by a bound in `BtreeCursorOps`
 --> $WORKSPACE/crates/fsqlite-btree/src/traits.rs
  |
  | pub trait BtreeCursorOps: sealed::Sealed {
  |                           ^^^^^^^^^^^^^^ required by this bound in `BtreeCursorOps`
  = note: `BtreeCursorOps` is a "sealed trait", because to implement it you also need to implement `fsqlite_btree::traits::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            fsqlite_btree::BtCursor<P>
            fsqlite_btree::MockBtreeCursor
